import React from 'react';
import { configure } from 'enzyme';
import Adapter from 'enzyme-adapter-react-16';
import { shallow } from 'enzyme';
import Accordion from './Accordion';
import toJson from 'enzyme-to-json';

configure({ adapter: new Adapter() });
describe(`Sections Component`, () => {
  const sections = [
    {
      title: 'Section 1',
      content: 'Lorem ipsum dolor sit amet consectetur adipisicing elit.',
    },
    {
      title: 'Section 2',
      content: 'Cupiditate tenetur aliquam necessitatibus id distinctio quas nihil ipsam nisi modi!',
    },
    {
      title: 'Section 3',
      content: 'Animi amet cumque sint cupiditate officia ab voluptatibus libero optio et?',
    },
  ]
  
it('renders empty given no tabs', () => {
  const wrapper = shallow(<Accordion />)
  expect(toJson(wrapper)).toMatchSnapshot() 
})

it('renders no section active by default', () => {
  const wrapper = shallow(<Accordion sections={sections} />)
  expect(toJson(wrapper)).toMatchSnapshot()
})

it('opens any clicked section', () => {
  const wrapper = shallow(<Accordion sections={sections} />)
  wrapper.find('button').at(1).simulate('click')
  expect(toJson(wrapper)).toMatchSnapshot()
})

it('only opens one section at a time', () => {
  const wrapper = shallow(<Accordion sections={sections} />)
  wrapper.find('button').at(1).simulate('click')
  wrapper.find('button').at(2).simulate('click')
  expect(toJson(wrapper)).toMatchSnapshot()
})
})


